# DCC_CMake_Examples

./: README.md
CMake_3DsMax/: CMakeLists.txt  MainMaxCMake.bat
CMake_3DsMax/cmake/: FindMax.cmake
CMake_3DsMax/projects/TestMeshObj/: CMakeLists.txt  DllEntry.cpp  TestMeshObj.aps  TestMeshObj.cpp  TestMeshObj.def  TestMeshObj.h  TestMeshObj.rc  resource.h
CMake_Maya/: CMakeLists.txt  MainMayaCMake.bat  test_maya.py
CMake_Maya/cmake/: FindMaya.cmake
CMake_Maya/maya_debug/: maya_start_cmd.mel  maya_start_cmd.py  test_debug_maya.py  test_maya.bat  unload_plugins.py
CMake_Maya/plug-ins/Release/2020/: testCommandPlugin.mll
CMake_Maya/projects/testCommand/: CMakeLists.txt  pluginMain.cpp  testCommand.cpp  testCommand.h
CMake_Maya/projects/testDeformer/: CMakeLists.txt  pluginMain.cpp  testDeformer.cpp  testDeformer.h
CMake_Mobu/: CMakeLists.txt  MainMobuCMake.bat
CMake_Mobu/cmake/: FindMobu.cmake
CMake_Mobu/projects/orconstraintposition/: CMakeLists.txt  orconstraintposition.cpp  orconstraintposition_constraint.cpp  orconstraintposition_constraint.h
